sharing: don't allow empty passwords in screen sharing

if the user chooses to use a password but doesn't provide one,
then revert the option to not use a password at all.

https://bugzilla.gnome.org/show_bug.cgi?id=703512